Update LockService strict mode, fix flickering, reset app selection, and whitelist file pickers

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         tools:ignore="ProtectedPermissions" />
 
     <application
+        android:name=".KeepMyPhoneOutApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -22,7 +23,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MindControl"
+        android:theme="@style/Theme.KeepMyPhoneOut"
         tools:targetApi="31">
 
         <!-- AdMob App ID -->
@@ -34,7 +35,7 @@
         <activity
             android:name=".OnboardingActivity"
             android:exported="true"
-            android:theme="@style/Theme.MindControl">
+            android:theme="@style/Theme.KeepMyPhoneOut">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
